--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -14,17 +14,6 @@ body {
     background-color: rgb(97, 81, 160)
 }
 
-/*rgb(247, 212, 212);*/
-
-.img-to-sites {
-    border-radius: 20px;
-    max-width: 100%;
-    max-height: 100%;
-    border: 2px solid rgb(0, 0, 0);
-    margin-top: 2px;
-    margin-bottom: 2px;
-}
-
 #about-me-div {
 
     text-align: center;
@@ -61,6 +50,11 @@ body{
     border-radius: 5px;
 }
 
+#github-icon{
+    background-color: white;
+    border-radius: 15px;
+}
+
 .to-hover-principal:hover {    
     color: rgb(164, 94, 221);
 }
@@ -69,7 +63,44 @@ body{
     color: rgb(193, 148, 230);
 }
 
-.hover-picture:hover {    
-    opacity: 0.6;
+.portfolio-card{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top:20px
 }
 
+.portfolio-card figure{
+    position: relative;
+    max-height: 400px;
+    width: 400px;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0px 15px 25px rgba(0,0,0,0.50);
+    cursor: pointer;
+}
+
+.portfolio-card figure img {
+    width: 100%;
+    height: 100%;
+    transition: all 500ms ease-out;
+}
+
+.portfolio-card figure .capa{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background:rgba(0, 90, 123, 0.9);
+    transition: all 500ms ease-out;
+    opacity: 0;
+    visibility: hidden;
+    text-align: center;
+    background-size: contain;
+}
+
+.portfolio-card figure:hover > .capa{
+    opacity: 1;
+    visibility: visible;
+}
